[package]
name = "uringwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", rev = "21bdd86547fb03955192abe6ee9c5c5d6b312724" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
inotify = "0.10.0"
inotify-sys = "0.1"
